# dr-queues

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  README.md  docker-compose.yml  pyproject.toml
docs/: manual_runtime_testing.md  queue_issues.md
docs/design/: failure_persistence.md
docs/verification/: amqp_refactor_manual_testing.md  dashboard_demos.md
nbs/: hello_world.py
notebooks/: quickstart.py  run_exploration.py
scripts/: hello_world.py  pre-check.sh  run_pipeline_demo.py  run_stage_workers.py
src/dr_providers/: __init__.py
src/dr_queues/: __init__.py  demo_handlers.py  targeting.py  utils.py
src/dr_queues/amqp/: __init__.py  connection.py  publish.py  queues.py  session.py  topology.py
src/dr_queues/analysis/: __init__.py  filter.py
src/dr_queues/cli/: __init__.py  commands.py  demo.py  run.py  stage_worker.py
src/dr_queues/events/: __init__.py  amqp.py  memory.py  mongo.py  schema.py  sink.py
src/dr_queues/manifest/: __init__.py  manifest.py
src/dr_queues/pipeline/: __init__.py  eligibility.py  execution.py  job.py  runner.py  tap.py  workers.py
src/dr_queues/runtime/: __init__.py  lifecycle.py  models.py  observability.py  status.py  store.py
src/dr_queues/viewer/: app.py  cli.py
src/dr_queues/viewer/static/: app.js  index.html  styles.css
src/dr_queues/workflow/: __init__.py  definition.py  pipeline.py  registry.py
tests/: conftest.py  test_amqp.py  test_amqp_sink.py  test_filter_events.py  test_job_envelope.py  test_lifecycle.py  test_manifest.py  test_memory_sink.py  test_mongo_sink.py  test_observability.py  test_pipeline.py  test_pipeline_mongo.py  test_registry.py  test_runtime_store.py  test_stage_eligibility.py  test_targeting.py  test_viewer_api.py  test_workers.py
