[project]
name = "dr-queues"
version = "0.1.4"
description = "RabbitMQ multi-stage pipeline runtime with MongoDB-backed run state"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Danielle Rothermel", email = "danielle.rothermel@gmail.com" }
]
requires-python = ">=3.12"
keywords = ["rabbitmq", "pipeline", "workflow", "queue", "amqp", "mongodb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "pika>=1.4.1",
    "pydantic>=2.13.4",
    "pymongo>=4.16.0",
    "typer>=0.26.7",
]

[project.urls]
Homepage = "https://github.com/danielle-rothermel/dr-queues"
Repository = "https://github.com/danielle-rothermel/dr-queues"
Issues = "https://github.com/danielle-rothermel/dr-queues/issues"

[project.scripts]
dr-queues-demo = "dr_queues.cli.demo:run"
dr-queues-run = "dr_queues.cli.run:run"
dr-queues-stage-worker = "dr_queues.cli.stage_worker:run"
dr-queues-viewer = "dr_queues.viewer.cli:run"

[project.optional-dependencies]
viewer = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "uvicorn[standard]>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dr_queues"]

[dependency-groups]
dev = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "marimo[recommended]>=0.23.10",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
    "ty>=0.0.51",
    "uvicorn[standard]>=0.34.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring RabbitMQ and/or MongoDB",
]

[tool.ruff]
include = ["scripts/**/*.py", "src/**/*.py", "tests/**/*.py"]
line-length = 79

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "ASYNC",
    "DTZ",
    "FA",
    "FLY",
    "FURB",
    "G",
    "I",
    "ICN",
    "ISC",
    "LOG",
    "N",
    "NPY",
    "PD",
    "PIE",
    "PTH",
    "PT",
    "RET",
    "RSE",
    "RUF",
    "SLOT",
    "T10",
    "TID",
    "UP",
    "W",
    "YTT",
]

[tool.ty.src]
include = ["scripts", "src"]
exclude = ["nbs", "tests"]
